updated user dashboard

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,10 +36,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/users">
                     <img src="assets/img/logo.png" alt="" />
                 </a>
             </div>
+
+            <li><a href="/users">Users</a></li>
+
             <!-- end navbar-header -->
             <!-- navbar-top-links -->
             <ul class="nav navbar-top-links navbar-right">
