updated yimi logo, added alerts on Tim dash, linked upload forms

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,7 +41,7 @@
                 </a>
             </div>
 
-            <li><a href="/users">Users</a></li>
+            <!-- <li><a href="/users">Users</a></li> -->
 
             <!-- end navbar-header -->
             <!-- navbar-top-links -->
