updated users dash

--- a/views/users_alan.handlebars
+++ b/views/users_alan.handlebars
@@ -251,7 +251,7 @@
                                 <img src="assets/img/user.jpg" alt="">
                             </div>
                             <div class="user-info">
-                                <div>Tenant  <strong>Tony</strong></div>
+                                <div>Agent  <strong>Alan</strong></div>
                                 <div class="user-text-online">
                                     <span class="user-circle-online btn btn-success btn-circle "></span>&nbsp;Online
                                 </div>
@@ -276,16 +276,17 @@
                         <a href="/"><i class="fa fa-dashboard fa-fw"></i>Dashboard</a>
                     </li>
                     <li>
-                        <a href="/forms"><i class="fa fa-table fa-fw"></i>Documents</a>
+                        <a href="/forms"><i class="fa fa-table fa-fw"></i>My Documents</a>
                     </li>
 
-                     <li>
-                        <a href="/forms"><i class="fa fa-flask fa-fw"></i>Timeline</a>
-                    </li>
+                    <li>
+                       <a href="/progress_alan"><i class="fa fa-flask fa-fw"></i>Application Progress</a>
+                   </li>
 
                     <li>
                         <a href="/forms"><i class="fa fa-edit fa-fw"></i>Forms</a>
                     </li>
+
 
 
                 </ul>
