cleaned up app directorues

--- a/views/users_alan.handlebars
+++ b/views/users_alan.handlebars
@@ -247,9 +247,7 @@
                     <li>
                         <!-- user image section-->
                         <div class="user-section">
-                            <div class="user-section-inner">
-                                <img src="assets/img/user.jpg" alt="">
-                            </div>
+
                             <div class="user-info">
                                 <div>Agent  <strong>Alan</strong></div>
                                 <div class="user-text-online">
@@ -302,7 +300,7 @@
             <div class="row">
                 <!-- Page Header -->
                 <div class="col-lg-10">
-                    <h1 class="page-header">Welcome Tony</h1>
+                    <h1 class="page-header">Welcome Alan</h1>
                   </div>
 
 
