--- a/views/notifications.handlebars
+++ b/views/notifications.handlebars
@@ -9,10 +9,8 @@
     <link href="assets/plugins/bootstrap/bootstrap.css" rel="stylesheet" />
     <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="assets/plugins/pace/pace-theme-big-counter.css" rel="stylesheet" />
-   <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
       <link href="assets/css/main-style.css" rel="stylesheet" />
-    <!-- Page-Level CSS -->
-    <link href="assets/plugins/morris/morris-0.4.3.min.css" rel="stylesheet" />
 
 
 </head>
@@ -290,13 +288,13 @@
                     <li class="">
                         <a href="index.html"><i class="fa fa-dashboard fa-fw"></i>Dashboard</a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i>Charts<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="flot.html">Flot Charts</a>
                             </li>
-                            <li class="selected">
+                            <li>
                                 <a href="morris.html">Morris Charts</a>
                             </li>
                         </ul>
@@ -311,7 +309,7 @@
                     <li>
                         <a href="forms.html"><i class="fa fa-edit fa-fw"></i>Forms</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="#"><i class="fa fa-wrench fa-fw"></i>UI Elements<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
@@ -320,7 +318,7 @@
                             <li>
                                 <a href="buttons.html">Buttons</a>
                             </li>
-                            <li>
+                            <li class="selected">
                                 <a href="notifications.html">Notifications</a>
                             </li>
                             <li>
@@ -381,68 +379,133 @@
         </nav>
         <!-- end navbar side -->
         <!--  page-wrapper -->
-       
-        <div id="page-wrapper">
+      <div id="page-wrapper">
             <div class="row">
-                 <!--  page header -->
+                <!--  page header -->
                 <div class="col-lg-12">
-                    <h1 class="page-header">Morris Charts</h1>
+                    <h1 class="page-header">Notifications</h1>
                 </div>
-                <!--end  page header -->
+                 <!--end  page header -->
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <!--  Area Chart -->
+                     <!--  Alert Styles -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Area Chart Example
+                            Alert Styles
                         </div>
                         <div class="panel-body">
-                            <div id="morris-area-chart"></div>
+                            <div class="alert alert-success">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="alert-link">Alert Link</a>.
+                            </div>
+                            <div class="alert alert-info">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="alert-link">Alert Link</a>.
+                            </div>
+                            <div class="alert alert-warning">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="alert-link">Alert Link</a>.
+                            </div>
+                            <div class="alert alert-danger">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="alert-link">Alert Link</a>.
+                            </div>
                         </div>
                     </div>
-                    <!-- End Area Chart -->
-                </div>
-               
-                <div class="col-lg-6">
-                     <!--  Bar Chart -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Bar Chart Example
-                        </div>
-                        <div class="panel-body">
-                            <div id="morris-bar-chart"></div>
-                        </div>
-                    </div>
-            <!-- End Bar Chart -->
+                    <!-- End Alert Styles -->
                 </div>
                 <div class="col-lg-6">
-                     <!--  Line Chart -->
+                    <!--  Dismissable Alerts -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Line Chart Example
+                            Dismissable Alerts
                         </div>
                         <div class="panel-body">
-                            <div id="morris-line-chart"></div>
+                            <div class="alert alert-success alert-dismissable">
+                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="alert-link">Alert Link</a>.
+                            </div>
+                            <div class="alert alert-info alert-dismissable">
+                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="alert-link">Alert Link</a>.
+                            </div>
+                            <div class="alert alert-warning alert-dismissable">
+                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="alert-link">Alert Link</a>.
+                            </div>
+                            <div class="alert alert-danger alert-dismissable">
+                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="alert-link">Alert Link</a>.
+                            </div>
                         </div>
                     </div>
-                     <!--  End Line Chart -->
+                     <!-- End Dismissable Alerts -->
                 </div>
-                <div class="col-lg-6">
-                     <!--  Donut Chart -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Donut Chart Example
-                        </div>
-                        <div class="panel-body">
-                            <div id="morris-donut-chart"></div>
-                        </div>
-                    </div>
-                    <!-- End Donut Chart -->
-                </div>
-                
             </div>
-            
+            <div class="row">
+                <div class="col-lg-6">
+                     <!--  Modals-->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            Modals
+                        </div>
+                        <div class="panel-body">
+                            <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                                Launch Demo Modal
+                            </button>
+                            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                     <!-- End Modals-->
+                </div>
+                <div class="col-lg-6">
+                     <!--  Tooltips and Popovers-->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            Tooltips and Popovers
+                        </div>
+                        <div class="panel-body">
+                            <h4>Tooltip Demo</h4>
+                            <div class="tooltip-demo">
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip on left</button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip on top</button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip on bottom</button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip on right</button>
+                            </div>
+                            <br>
+                            <h4>Clickable Popover Demo</h4>
+                            <div class="tooltip-demo">
+                                <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+                                    Popover on left
+                                </button>
+                                <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+                                    Popover on top
+                                </button>
+                                <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+                                    Popover on bottom
+                                </button>
+                                <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+                                    Popover on right
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                     <!--End  Tooltips and Popovers-->
+                </div>
+            </div>
         </div>
         <!-- end page-wrapper -->
 
@@ -455,10 +518,7 @@
     <script src="assets/plugins/metisMenu/jquery.metisMenu.js"></script>
     <script src="assets/plugins/pace/pace.js"></script>
     <script src="assets/scripts/siminta.js"></script>
-    <!-- Page-Level Plugin Scripts-->
-    <script src="assets/plugins/morris/raphael-2.1.0.min.js"></script>
-    <script src="assets/plugins/morris/morris.js"></script>
-    <script src="assets/scripts/morris-demo.js"></script>
+
 </body>
 
 </html>
