--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -4,10 +4,21 @@
 <head>
     <meta charset="utf-8">
     <title></title>
+
+
+<style media="screen">
+.no_match{
+  border:5px solid red;
+}
+.match{
+  border:5px solid green;
+}
+</style>
+
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script></head>
 
 <body>
-    <video id="video" width="640" height="480" autoplay></video>
+    <video id="video" width="640" height="480" autoplay ></video>
     <button id="snap">Snap Photo</button>
     <canvas id="canvas" width="640" height="480"></canvas>
 </body>
