--- a/views/users_alan.handlebars
+++ b/views/users_alan.handlebars
@@ -194,15 +194,15 @@
                         <a href="/"><i class="fa fa-dashboard fa-fw"></i>Dashboard</a>
                     </li>
                     <li>
-                        <a href="/forms"><i class="fa fa-table fa-fw"></i>My Documents</a>
+                        <a href="/forms"><i class="fa fa-table fa-fw"></i>Tenant Documents</a>
                     </li>
 
                     <li>
-                       <a href="/progress_alan"><i class="fa fa-flask fa-fw"></i>Application Progress</a>
+                       <a href="/progress_alan"><i class="fa fa-flask fa-fw"></i>Tenant Application Progress</a>
                    </li>
 
                     <li>
-                        <a href="/forms"><i class="fa fa-edit fa-fw"></i>Forms</a>
+                        <a href="/forms"><i class="fa fa-edit fa-fw"></i>Request List</a>
                     </li>
 
 
