--- a/views/users_tony.handlebars
+++ b/views/users_tony.handlebars
@@ -247,9 +247,9 @@
                     <li>
                         <!-- user image section-->
                         <div class="user-section">
-                          
+
                             <div class="user-info">
-                                <div>Tenant  <strong>Tony</strong></div>
+                                <div>Tenant </div>
                                 <div class="user-text-online">
                                     <span class="user-circle-online btn btn-success btn-circle "></span>&nbsp;Online
                                 </div>
@@ -274,7 +274,7 @@
                         <a href="/"><i class="fa fa-dashboard fa-fw"></i>Dashboard</a>
                     </li>
                     <li>
-                        <a href="/forms"><i class="fa fa-table fa-fw"></i>My Documents</a>
+                        <a href="/alan"><i class="fa fa-table fa-fw"></i>My Documents</a>
                     </li>
 
                     <li>
@@ -282,7 +282,7 @@
                    </li>
 
                     <li>
-                        <a href="/forms"><i class="fa fa-edit fa-fw"></i>Forms</a>
+                        <a href="/forms"><i class="fa fa-edit fa-fw"></i>Image upload</a>
                     </li>
 
 
