--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -19,7 +19,7 @@
 
 <body>
     <video id="video" width="640" height="480" autoplay ></video>
-    <button id="snap">Snap Photo</button>
+    <button id="snap">Verify</button>
     <canvas id="canvas" width="640" height="480"></canvas>
 </body>
 <script src="scripts/client.js" charset="utf-8"></script>
