--- a/views/users_tenant.handlebars
+++ b/views/users_tenant.handlebars
@@ -274,15 +274,15 @@
                         <a href="/"><i class="fa fa-dashboard fa-fw"></i>Dashboard</a>
                     </li>
                     <li>
-                        <a href="/alan"><i class="fa fa-table fa-fw"></i>My Documents</a>
+                        <a href="/agent"><i class="fa fa-table fa-fw"></i>My Documents</a>
                     </li>
 
                     <li>
-                       <a href="/progress_tony"><i class="fa fa-flask fa-fw"></i>Application Progress</a>
+                       <a href="/progress_tenant"><i class="fa fa-flask fa-fw"></i>Application Progress</a>
                    </li>
 
                     <li>
-                        <a href="/forms"><i class="fa fa-edit fa-fw"></i>Image upload</a>
+                        <a href="/upload"><i class="fa fa-edit fa-fw"></i>Image upload</a>
                     </li>
 
 
