--- a/views/users_agent.handlebars
+++ b/views/users_agent.handlebars
@@ -194,15 +194,15 @@
                         <a href="/"><i class="fa fa-dashboard fa-fw"></i>Dashboard</a>
                     </li>
                     <li>
-                        <a href="/forms"><i class="fa fa-table fa-fw"></i>Tenant Documents</a>
+                        <a href="/agent"><i class="fa fa-table fa-fw"></i>Tenant Documents</a>
                     </li>
 
                     <li>
-                       <a href="/progress_alan"><i class="fa fa-flask fa-fw"></i>Tenant Application Progress</a>
+                       <a href="/progress_agent"><i class="fa fa-flask fa-fw"></i>Tenant Application Progress</a>
                    </li>
 
                     <li>
-                        <a href="/forms"><i class="fa fa-edit fa-fw"></i>Request List</a>
+                        <a href="/request"><i class="fa fa-edit fa-fw"></i>Request List</a>
                     </li>
 
 
@@ -220,7 +220,7 @@
             <div class="row">
                 <!-- Page Header -->
                 <div class="col-lg-10">
-                    <h1 class="page-header">Welcome Alan</h1>
+                    <h1 class="page-header">Tenant Documents</h1>
                   </div>
 
 
@@ -236,12 +236,18 @@
       </div>
       <div class="checkbox">
           <label>
-              <input type="checkbox" value="">Three months payment statement
+              <input type="checkbox" value="">Three months bank statement
           </label>
       </div>
       <div class="checkbox">
           <label>
               <input type="checkbox" value="">Latest Payslip
+          </label>
+      </div>
+
+      <div class="checkbox">
+          <label>
+              <input type="checkbox" value="">Proof of previous address
           </label>
       </div>
   </div>
