updated request list

--- a/views/progress_agent.handlebars
+++ b/views/progress_agent.handlebars
@@ -48,19 +48,19 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>Contacted regarding documents upload .</div>
                             </a>
                         </li>
                         <li class="divider"></li>
                         <li>
                             <a href="#">
                                 <div>
-                                    <strong><span class=" label label-info">Zimkhita Matshamgaza</span></strong>
+                                    <strong><span class=" label label-info">Tom Hiddleston</span></strong>
                                     <span class="pull-right text-muted">
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>Will get back to you regarding my documents</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -72,7 +72,7 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>Still waitin on bank verification</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -213,19 +213,21 @@
         <!-- end navbar side -->
         <!--  page-wrapper -->
         <div id="page-wrapper">
+          <div class="container">
 
             <div class="row">
                 <!-- Page Header -->
-                <div class="col-lg-12">
+                <div class="col-lg-10">
                     <h1 class="page-header">Application Progress</h1>
                 </div>
                 <!--End Page Header -->
             </div>
 
             <!-- <li class="dropdown"> -->
-                <div class="container">
                   <p>Tenant Emma</p>
-  <div class="progress">
+                  <div class="col-md-8">
+
+  <div class="progress" "col-md-8">
     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
       100% Complete (verified Docs)
     </div>
@@ -246,20 +248,7 @@
 </div>
 
 
-                                <li class="timeline-inverted">
-                                    <div class="timeline-badge success">
-                                        <i class="fa fa-thumbs-up"></i>
-                                    </div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h4 class="timeline-title">Timeline Event</h4>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel justo eu mi scelerisque vulputate. Aliquam in metus eu lectus aliquet egestas.</p>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
+
                         </div>
 
                     </div>
