--- a/views/requestlist.handlebars
+++ b/views/requestlist.handlebars
@@ -219,7 +219,7 @@
 
             <div class="row">
                 <!-- Page Header -->
-                <div class="col-lg-10">
+                <div class="col-md-10">
                     <h1 class="page-header">Request List</h1>
                   </div>
 
@@ -241,26 +241,52 @@ Latest Payslip <input type="checkbox" checked="checked" value="docs"><br>
 Proof of previous address <input type="checkbox" checked="checked" value="docs"><br>
 
  </div>
-      </div>
+</div>
+</div>
+</div>
 
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">Tenant : Tom Hiddleston</h3>
-          Identity/Passport <input type="uncheckbox" unchecked="unchecked" value="not uploaded"><br>
-          Three months bank statement <input type="uncheckbox" unchecked="unchecked" value="not uploaded"><br>
-          Latest Payslip <input type="uncheckbox" unchecked="unchecked" value="not uploaded"><br>
-          Proof of previous address <input type="uncheckbox" unchecked="checked" value="not uploaded"><br>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Tenant : Roxanne Ruiters</h3>
-            Identity/Passport <input type="checkbox" checked="checked" value=""><br>
-            Three months bank statement <input type="uncheckbox" unchecked="checked" value="not uploaded"><br>
-            Latest Payslip <input type="checkbox" checked="checked" value=""><br>
-            Proof of previous address <input type="checkbox" checked="checked" value=""><br>
-          </div>
- </div>
+<div class="form-group">
+    <!-- <label>Checkboxes</label> -->
+    <div class = "container">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Tenant : Tom Hiddleston</h3>
       </div>
+      <div class="panel-body">
+        Identity/Passport <input type="uncheckbox" unchecked="unchecked" value="not uploaded"><br>
+        Three months bank statement <input type="uncheckbox" unchecked="unchecked" value="not uploaded"><br>
+        Latest Payslip <input type="uncheckbox" unchecked="unchecked" value="not uploaded"><br>
+        Proof of previous address <input type="uncheckbox" unchecked="checked" value="not uploaded"><br>
+
+</div>
+</div>
+</div>
+</div>
+
+
+<div class="form-group">
+    <!-- <label>Checkboxes</label> -->
+    <div class = "container">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Tenant : Roxanne Ruiters</h3>
+      </div>
+      <div class="panel-body">
+        Identity/Passport <input type="checkbox" checked="checked" value=""><br>
+        Three months bank statement <input type="uncheckbox" unchecked="checked" value="not uploaded"><br>
+        Latest Payslip <input type="checkbox" checked="checked" value=""><br>
+        Proof of previous address <input type="checkbox" checked="checked" value=""><br>
+
+</div>
+</div>
+</div>
+</div>
+
+
+
+
+
+
 
 
 
