agent handlebars updated

--- a/views/progress_agent.handlebars
+++ b/views/progress_agent.handlebars
@@ -197,7 +197,7 @@
                     </li>
 
                     <li>
-                       <a href="/progress_agent"><i class="fa fa-flask fa-fw"></i>Tenant Appliction Progress</a>
+                       <a href="/progress_agent"><i class="fa fa-flask fa-fw"></i>Tenant Application Progress</a>
                    </li>
 
                     <li>
