updated flow between agent and tenant

--- a/views/progress_tenant.handlebars
+++ b/views/progress_tenant.handlebars
@@ -251,7 +251,7 @@
                                 <img src="assets/img/user.jpg" alt="">
                             </div>
                             <div class="user-info">
-                                <div>Tenant  <strong>Tony</strong></div>
+                                <div>Tenant</div>
                                 <div class="user-text-online">
                                     <span class="user-circle-online btn btn-success btn-circle "></span>&nbsp;Online
                                 </div>
@@ -280,11 +280,11 @@
                     </li>
 
                     <li>
-                       <a href="/progress"><i class="fa fa-flask fa-fw"></i>Appliction Progress</a>
+                       <a href="/progress_tenant"><i class="fa fa-flask fa-fw"></i>Appliction Progress</a>
                    </li>
 
                     <li>
-                        <a href="/forms"><i class="fa fa-edit fa-fw"></i>Forms</a>
+                        <a href="/upload"><i class="fa fa-edit fa-fw"></i>upload</a>
                     </li>
 
 
