--- a/views/users_agent.handlebars
+++ b/views/users_agent.handlebars
@@ -201,6 +201,10 @@
                        <a href="/progress_agent"><i class="fa fa-flask fa-fw"></i>Tenant Application Progress</a>
                    </li>
 
+                   <li>
+                      <a href="/progress_tenant"><i class="fa fa-flask fa-fw"></i> Application Progress</a>
+                  </li>
+
                     <li>
                         <a href="/request"><i class="fa fa-edit fa-fw"></i>Request List</a>
                     </li>
