--- a/views/users_tenant.handlebars
+++ b/views/users_tenant.handlebars
@@ -271,14 +271,22 @@
                     </li>
 
                     <li class="active">
-                        <a href="/"><i class="fa fa-dashboard fa-fw"></i>Dashboard</a>
+                        <a href="/"><i class="fa fa-dashboard fa-fw"></i>Dashboard Tenant</a>
+                    </li>
+
+                    <li class="active">
+                        <a href="/agent"><i class="fa fa-dashboard fa-fw"></i>Dashboard Agent</a>
                     </li>
                     <li>
                         <a href="/agent"><i class="fa fa-table fa-fw"></i>My Documents</a>
                     </li>
 
                     <li>
-                        <a href="/progress_tenant"><i class="fa fa-flask fa-fw"></i>Application Progress</a>
+                       <a href="/progress_agent"><i class="fa fa-flask fa-fw"></i>Tenant Document Progress</a>
+                    </li>
+
+                    <li>
+                        <a href="/progress_tenant"><i class="fa fa-flask fa-fw"></i> Tenant Application Progress</a>
                     </li>
 
                     <li>
