updated progress of tenant and agent

--- a/views/progress_agent.handlebars
+++ b/views/progress_agent.handlebars
@@ -218,7 +218,7 @@
             <div class="row">
                 <!-- Page Header -->
                 <div class="col-lg-10">
-                    <h1 class="page-header">Application Progress</h1>
+                    <h1 class="page-header">Agent's list of Tenant Application Progress</h1>
                 </div>
                 <!--End Page Header -->
             </div>
