--- a/views/progress_tenant.handlebars
+++ b/views/progress_tenant.handlebars
@@ -306,7 +306,7 @@
             <div class="row">
                 <!-- Page Header -->
                 <div class="col-lg-12">
-                    <h1 class="page-header">Application Progress</h1>
+                    <h1 class="page-header">Tenants Progress in Application</h1>
                 </div>
                 <!--End Page Header -->
             </div>
