--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -6,22 +6,29 @@
     <title></title>
 
 
-<style media="screen">
-.no_match{
-  border:5px solid red;
-}
-.match{
-  border:5px solid green;
-}
-</style>
+    <style media="screen">
+        .no_match {
+            border: 5px solid red;
+        }
 
-<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script></head>
+        .match {
+            border: 5px solid green;
+        }
+    </style>
+
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+</head>
 
 <body>
-    <video id="video" width="640" height="480" autoplay ></video>
-    <button id="snap">Verify</button>
-    <canvas id="canvas" width="640" height="480"></canvas>
+    <div>
+        <div style="inline-block;padding:20px">
+            <video id="video" width="600" height="480" autoplay></video>
+            <canvas id="canvas" width="600" height="480" style="margin-left:40px"></canvas>
+        </div>
+        <button class="btn btn-primary btn-lg" id="snap" style="margin-left:280px"><b>VERIFY</b></button>
+    </div>
 </body>
+
 <script src="scripts/client.js" charset="utf-8"></script>
 
 </html>
