--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -25,7 +25,7 @@
             <video id="video" width="600" height="480" autoplay></video>
             <canvas id="canvas" width="600" height="480" style="margin-left:40px"></canvas>
         </div>
-        <button class="btn btn-primary btn-lg" id="snap" style="margin-left:280px"><b>VERIFY</b></button>
+        <button class="btn btn-primary btn-lg" id="snap" style="margin-left:280px"><b>Authenticate</b></button>
     </div>
 </body>
 
