--- a/views/users_tenant.handlebars
+++ b/views/users_tenant.handlebars
@@ -290,7 +290,7 @@
                     </li>
 
                     <li>
-                        <a href="/upload"><i class="fa fa-edit fa-fw"></i>Image upload</a>
+                        <a href="/upload"><i class="fa fa-edit fa-fw"></i>Image Authentication</a>
                     </li>
 
 
