--- a/views/users_tenant.handlebars
+++ b/views/users_tenant.handlebars
@@ -381,7 +381,14 @@ upload                                    </button>
                     </div>
 
                 </div>
+                <h2>3 Month Certification Reminder</h2>
+                <p>Your certification / authentication reminder</p>
+                <div class=col-md-6>
 
+                <div class="alert alert-info">
+                    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                    <p> <strong>Certification</strong> Your 5 days left to update your certified documents. 3 months certification will add in 5 days.</p>
+                </div>
             </div>
             <!--End Page Header -->
         </div>
